--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,11 @@
     </properties>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>5.6.0</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.3.0</version>
         </dependency>
-
     </dependencies>
 
 </project>
